# rust_todos

./: .env  .gitignore  Cargo.toml  Rocket.toml  todo.60
migrations/2021-10-23-023008_create_users/: up.sql
migrations/2021-10-23-174155_user_detail/: down.sql  up.sql
migrations/2021-10-26-121012_create_todos/: down.sql  up.sql
src/: database.rs  main.rs  utils.rs
src/controllers/: auth.rs  mod.rs  todos.rs  user_detail.rs
src/controllers/auth/: auth_key.rs  from_request.rs  utils.rs
src/controllers/auth/utils/: auth_err.rs  new_user.rs  user_auth.rs
src/controllers/todos/: create.rs  read.rs
src/controllers/todos/read/: todos.rs
src/database/: select_builder.rs
src/forms/: auth.rs  mod.rs  todo.rs  user_detail.rs
src/forms/todo/: fromforms.rs
src/models/: mod.rs  schema.rs  todo.rs  user.rs  user_detail.rs
src/models/todo/: impls.rs  tags.rs
src/utils/: matrix.rs
