[package]
name = "todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.5.4"

rust-crypto = "^0.2"

[dependencies.serde]
version= "1.0.130"
features=["derive"]

[dependencies.serde_json]
version = "1.0.68"

[dependencies.rocket]
version ="0.5.0-rc.1"
features=["secrets","json"]
